Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Butcherman&family=Dosis:wght@200..800&family=Jacquard+12+Charted&family=Lacquer&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display&family=Single+Day&family=Workbench&display=swap');
 
 :root{
     --branco: white;
